--- a/fullstack/backend/frameworks/package.json
+++ b/fullstack/backend/frameworks/package.json
@@ -4,13 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dipika": "ts-node app.ts"
+    "dipika": "nodemon  app.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "nodemon": "^2.0.20",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
